[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/menu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://hud/menu/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/menu/CreditsScreen.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Spatial"]
script = ExtResource( 2 )
StateCamera = NodePath("Camera")

[node name="Camera" type="Camera" parent="."]

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CreditsScreen" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="open_credits" from="MainMenu" to="." method="_toggle_credits"]
[connection signal="open_options" from="MainMenu" to="." method="_toggle_options"]
[connection signal="start_game" from="MainMenu" to="." method="_close_with_start"]
[connection signal="close_options" from="SettingsMenu" to="." method="_toggle_options"]
[connection signal="close_screen" from="CreditsScreen" to="." method="_toggle_credits"]
